# slides

./: .gitignore  README.md  pyproject.toml
presentations/experimentation/: experimentation-intro.tex  experimentation-intro.vrb  experimentation.tex
presentations/experimentation/code/: output.txt  simulations.py
presentations/instrument-variables/: iv.aux  iv.fls  iv.pyg  iv.tex  iv.vrb
presentations/synthetic-cohorts/: synth-cohorts.tex
